; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_namei.c_ext4_inc_count.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_namei.c_ext4_inc_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32, i32 }

@EXT4_LINK_MAX = common dso_local global i32 0, align 4
@EXT4_FEATURE_RO_COMPAT_DIR_NLINK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.inode*)* @ext4_inc_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ext4_inc_count(i32* %0, %struct.inode* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.inode*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.inode* %1, %struct.inode** %4, align 8
  %5 = load %struct.inode*, %struct.inode** %4, align 8
  %6 = call i32 @inc_nlink(%struct.inode* %5)
  %7 = load %struct.inode*, %struct.inode** %4, align 8
  %8 = call i64 @is_dx(%struct.inode* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %35

10:                                               ; preds = %2
  %11 = load %struct.inode*, %struct.inode** %4, align 8
  %12 = getelementptr inbounds %struct.inode, %struct.inode* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp sgt i32 %13, 1
  br i1 %14, label %15, label %35

15:                                               ; preds = %10
  %16 = load %struct.inode*, %struct.inode** %4, align 8
  %17 = getelementptr inbounds %struct.inode, %struct.inode* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @EXT4_LINK_MAX, align 4
  %20 = icmp sge i32 %18, %19
  br i1 %20, label %26, label %21

21:                                               ; preds = %15
  %22 = load %struct.inode*, %struct.inode** %4, align 8
  %23 = getelementptr inbounds %struct.inode, %struct.inode* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = icmp eq i32 %24, 2
  br i1 %25, label %26, label %34

26:                                               ; preds = %21, %15
  %27 = load %struct.inode*, %struct.inode** %4, align 8
  %28 = getelementptr inbounds %struct.inode, %struct.inode* %27, i32 0, i32 0
  store i32 1, i32* %28, align 4
  %29 = load %struct.inode*, %struct.inode** %4, align 8
  %30 = getelementptr inbounds %struct.inode, %struct.inode* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @EXT4_FEATURE_RO_COMPAT_DIR_NLINK, align 4
  %33 = call i32 @EXT4_SET_RO_COMPAT_FEATURE(i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %26, %21
  br label %35

35:                                               ; preds = %34, %10, %2
  ret void
}

declare dso_local i32 @inc_nlink(%struct.inode*) #1

declare dso_local i64 @is_dx(%struct.inode*) #1

declare dso_local i32 @EXT4_SET_RO_COMPAT_FEATURE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
